--- a/employees/package.json
+++ b/employees/package.json
@@ -27,6 +27,9 @@
     "@nestjs/core": "9.4.0",
     "@nestjs/microservices": "9.4.0",
     "@nestjs/platform-express": "9.3.12",
+    "@nestjs/platform-ws": "9.4.0",
+    "@nestjs/websockets": "9.4.0",
+    "@types/ws": "8.5.4",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
     "reflect-metadata": "0.1.13",
