--- a/notifications/package.json
+++ b/notifications/package.json
@@ -31,7 +31,8 @@
     "reflect-metadata": "0.1.13",
     "rxjs": "7.2.0",
     "@nestjs/platform-ws": "9.4.0",
-    "@nestjs/websockets": "9.4.0"
+    "@nestjs/websockets": "9.4.0",
+    "@types/ws": "8.5.4"
   },
   "devDependencies": {
     "@nestjs/cli": "9.4.0",
@@ -41,7 +42,6 @@
     "@types/jest": "29.5.0",
     "@types/node": "18.15.11",
     "@types/supertest": "2.0.11",
-    "@types/ws": "8.5.4",
     "@typescript-eslint/eslint-plugin": "5.0.0",
     "@typescript-eslint/parser": "5.0.0",
     "eslint": "8.0.1",
